@@ -638,7 +638,7 @@ ags_notation_edit_drawing_area_key_release_event(GtkWidget *widget, GdkEventKey 
 	    do_feedback = TRUE;
 	  }
 
-	  x0_offset = notation_edit->cursor_position_x * notation_edit->control_width;
+	  x0_offset = notation_edit->cursor_position_x * AGS_NOTATION_EDIT_DEFAULT_CONTROL_WIDTH / zoom_factor;
       
 	  if(x0_offset < GTK_RANGE(notation_edit->hscrollbar)->adjustment->value){
 	    gtk_range_set_value(GTK_RANGE(notation_edit->hscrollbar),
@@ -706,7 +706,7 @@ ags_notation_edit_drawing_area_key_release_event(GtkWidget *widget, GdkEventKey 
 	    do_feedback = TRUE;
 	  }
 
-	  x0_offset = notation_edit->cursor_position_x * notation_edit->control_width;
+	  x0_offset = notation_edit->cursor_position_x * AGS_NOTATION_EDIT_DEFAULT_CONTROL_WIDTH / zoom_factor;
       
 	  if(x0_offset + notation_edit->control_width > GTK_RANGE(notation_edit->hscrollbar)->adjustment->value + GTK_WIDGET(notation_edit->drawing_area)->allocation.width){
 	    gtk_range_set_value(GTK_RANGE(notation_edit->hscrollbar),
